contrato diferencia se há ou não fiador

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -7,10 +7,8 @@
 
     h3{
         background-color: #4CAF50;
-        color: rgb(255, 255, 255)  
-        
-    }
-    
+        color: rgb(255, 255, 255)          
+    }        
     body {font-family: Arial;}
     
     /* Style the tab */
@@ -311,7 +309,7 @@
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.rep_org_emissor.label}} </label>        
-                    {% render_field form.rep_org_emissor  class="form-control" %}
+                    {% render_field form.rep_org_emissor  class="form-control upper_all" %}
                 </div>    
             </div>  
             <div class="col-sm-2">                    
