--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -43,8 +43,13 @@ label {
 input {
   text-transform: capitalize; 
 }
+/* apenas primeira letra maiuscula */
 .maiusculo {
   text-transform: capitalize;
+}
+/* todas as letras maiusculas */
+.upper_all {
+  text-transform: uppercase;
 }
 
   
