contrato diferencia se há ou não fiador+

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -506,7 +506,7 @@ window.onload = function imprimir(){
         contrato.innerHTML +=       
         `
         <div class="quadro" > 
-            <strong> II-CONTRATANTE MUTUÁRIA </strong><br>
+            <strong> III-DO GARANTIDOR - FIADOR </strong><br>
             Nome/Razão Social: ${razao_social},
             CNPJ: ${cnpj},
             Endereço: ${cnpj_rua}, ${cnpj_numero_casa}, ${cnpj_bairro}, ${cnpj_cidade}-${cnpj_uf} CEP: ${cnpj_cep},
