--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -165,16 +165,22 @@
                     {% render_field form.cidade class="form-control" name="cidade" type="text" id="cidade" size="40"%}
                 </div>
             </div>
-            <div class="col-sm-2">                    
+            <div class="col-sm-1">                    
                 <div class="form-group" >                
                     <label for="" class="required">{{form.uf.label}} </label>        
                     {% render_field form.uf class="form-control" name="uf" type="text" id="uf" size="2"%}
                 </div>
             </div>            
-            <div class="col-sm-5">                    
+            <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.ponto_referencia.label}} </label>        
                     {% render_field form.ponto_referencia class="form-control" %}
+                </div>
+            </div>   
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.complemento.label}} </label>        
+                    {% render_field form.complemento class="form-control" %}
                 </div>
             </div>   
         </div>  
