lowercase style adicionado aos emails

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -215,7 +215,7 @@
             <div class="col-sm-6">                    
                 <div class="form-group" >                
                     <label for="" class="required" >{{form.email.label}} </label>        
-                    {% render_field form.email class="form-control" %}
+                    {% render_field form.email class="form-control lower_all" %}
                 </div>
             </div>          
         </div> 
@@ -351,7 +351,7 @@
             <div class="col-sm-6">                    
                 <div class="form-group" >                
                     <label for="" >{{form.rep_email.label}} </label>        
-                    {% render_field form.rep_email class="form-control" %}
+                    {% render_field form.rep_email class="form-control lower_all" %}
                 </div>
             </div>
             <div class="col-sm-2">                    
