--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -47,7 +47,7 @@
             <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_email.label}} </label>        
-                    {% render_field form.fiador_email class="form-control" %}
+                    {% render_field form.fiador_email class="form-control lower_all" %}
                 </div>    
             </div>  
             <div class="col-sm-2">                    
