--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -225,7 +225,7 @@
             <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.email.label}} </label>        
-                    {% render_field form.email class="form-control" %}
+                    {% render_field form.email class="form-control lower_all" %}
                 </div>
             </div>
         </div>  
