--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -29,7 +29,7 @@
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_org_emissor.label}} </label>        
-                    {% render_field form.fiador_org_emissor  class="form-control" %}
+                    {% render_field form.fiador_org_emissor  class="form-control upper_all" %}
                 </div>    
             </div>  
             <div class="col-sm-2">                    
