orgão expedidor padronizado em todos apps +

--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -28,8 +28,8 @@
             </div>  
             <div class="col-sm-2">                    
                 <div class="form-group" >                
-                    <label for="" >{{form.fiador_org_emissor.label}} </label>        
-                    {% render_field form.fiador_org_emissor  class="form-control upper_all" %}
+                    <label for="" >{{form.fiador_orgao_emissor.label}} </label>        
+                    {% render_field form.fiador_orgao_emissor  class="form-control upper_all" %}
                 </div>    
             </div>  
             <div class="col-sm-2">                    
