--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -99,8 +99,8 @@
             </div>
             <div class="col-sm-2">                    
                 <div class="form-group" >                
-                    <label for="" class="required">{{form.orgao_expedidor.label}} </label>        
-                    {% render_field form.orgao_expedidor class="form-control upper_all" %}
+                    <label for="" class="required">{{form.orgao_emissor.label}} </label>        
+                    {% render_field form.orgao_emissor class="form-control upper_all" %}
                 </div>
             </div>
 
