--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -314,8 +314,8 @@
             </div>
             <div class="col-sm-2">                    
                 <div class="form-group" >                
-                    <label for="" >{{form.rep_org_emissor.label}} </label>        
-                    {% render_field form.rep_org_emissor  class="form-control upper_all" %}
+                    <label for="" >{{form.rep_orgao_emissor.label}} </label>        
+                    {% render_field form.rep_orgao_emissor  class="form-control upper_all" %}
                 </div>    
             </div>  
             <div class="col-sm-2">                    
