model na app core criada para tipos de banco Dados_bancarios

--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -132,8 +132,8 @@
             </div>            
             <div class="col-sm-4">                    
                 <div class="form-group" >                
-                    <label for="" >{{form.fiador_banco.label}} </label>        
-                    {% render_field form.fiador_banco class="form-control" %}
+                    <label for="" >{{form.banco.label}} </label>        
+                    {% render_field form.banco class="form-control" %}
                 </div>    
             </div>             
             <div class="col-sm-6">                    
