--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -64,10 +64,17 @@
             </div>  
             <div class="col-sm-2">                    
                 <div class="form-group" >                
-                    <label for="" >{{form.fiador_celular2.label}} </label>        
+                    <label for="" > {{form.fiador_celular2.label}} </label>   
                     {% render_field form.fiador_celular2 class="form-control cel-phone-mask" %}
-                </div>    
+                    <label class="checkbox-inline"> {{form.whatsapp.label}} <input type="checkbox" value="whatsapp" id="whatsapp" name="whatsapp"></label>                      
+                </div>                               
+               
             </div> 
+           
+                    {% comment %} <label class="checkbox-inline"> {{form.whatsapp.label}} </label>
+                    <input type="checkbox" value="whatsapp" id="whatsapp" name="whatsapp">    {% endcomment %}
+            
+
             {% comment %} ENDEREÇO INICIO {% endcomment %}
             <div class="col-sm-2">                    
                 <div class="form-group" >                
@@ -118,6 +125,12 @@
                 </div>
             </div>               
             {% comment %} ENDEREÇO FIM {% endcomment %}
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.banco.label}} </label>        
+                    {% render_field form.banco class="form-control" %}
+                </div>    
+            </div>             
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_agencia.label}} </label>        
@@ -130,12 +143,6 @@
                     {% render_field form.fiador_conta class="form-control" %}
                 </div>    
             </div>            
-            <div class="col-sm-4">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.banco.label}} </label>        
-                    {% render_field form.banco class="form-control" %}
-                </div>    
-            </div>             
             <div class="col-sm-6">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_copia.label}} </label>        
