--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -213,6 +213,7 @@
                 <div class="form-group" >                
                     <label for="" >{{form.contato2.label}} </label>        
                     {% render_field form.contato2 class="form-control phone-mask" type="text"%}
+                    <label class="checkbox-inline"> {{form.whatsapp.label}} <input type="checkbox" value="whatsapp" id="whatsapp" name="whatsapp"></label>
                 </div>
             </div>
             <div class="col-sm-2">                    
@@ -310,6 +311,12 @@
 
     <div id="Page3" class="tabcontent">       
         <div class="row">
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.banco.label}} </label>        
+                    {% render_field form.banco class="form-control" %}
+                </div>
+            </div>            
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.agencia.label}} </label>        
@@ -322,12 +329,6 @@
                     {% render_field form.conta class="form-control" %}
                 </div>
             </div>
-            <div class="col-sm-4">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.banco.label}} </label>        
-                    {% render_field form.banco class="form-control" %}
-                </div>
-            </div>            
         </div> 
     </div>
 
