Campo tipo_de_banco inserido em todas as APPs

--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -130,6 +130,12 @@
                     <label for="" >{{form.banco.label}} </label>        
                     {% render_field form.banco class="form-control" %}
                 </div>    
+            </div> 
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.tipo_de_conta.label}} </label>        
+                    {% render_field form.tipo_de_conta class="form-control" %}
+                </div>    
             </div>             
             <div class="col-sm-2">                    
                 <div class="form-group" >                
