Dados bancário refeitos e inseridos nas 3 APPs

--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -133,6 +133,12 @@
             </div> 
             <div class="col-sm-4">                    
                 <div class="form-group" >                
+                    <label for="" >{{form.fiador_n_operacao.label}} </label>        
+                    {% render_field form.fiador_n_operacao class="form-control" %}
+                </div>    
+            </div>
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
                     <label for="" >{{form.tipo_de_conta.label}} </label>        
                     {% render_field form.tipo_de_conta class="form-control" %}
                 </div>    
