--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -228,26 +228,32 @@
                 <div class="form-group" >                
                     <label for="" >{{form.banco.label}} </label>        
                     {% render_field form.banco class="form-control" %}
-                </div>
-            </div>   
+                </div>    
+            </div> 
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.n_operacao.label}} </label>        
+                    {% render_field form.n_operacao class="form-control" %}
+                </div>    
+            </div>
             <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.tipo_de_conta.label}} </label>        
                     {% render_field form.tipo_de_conta class="form-control" %}
                 </div>    
-            </div>           
+            </div>             
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.agencia.label}} </label>        
                     {% render_field form.agencia class="form-control" %}
-                </div>                    
-            </div>
+                </div>    
+            </div>  
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.conta.label}} </label>        
                     {% render_field form.conta class="form-control" %}
-                </div>
-            </div>
+                </div>    
+            </div>   
         </div>  
         <hr>
             <h3>REFERÊNCIAS</h3>  
