--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -364,7 +364,7 @@
 			carne.innerHTML +=
 			`			
 				<div class="box">			
-					${j}º&nbspParcela <strong>${dia}/${meses[mes-1]}/${ano}	</strong>			
+					${j}º&nbspParcela <strong>${dia}/${meses[mes-1]}/${ano}</strong>			
 				</div>				
 			`
 			}
@@ -380,7 +380,7 @@
 			carne.innerHTML +=
 			`			
 				<div class="box">			
-					${j}º&nbspParcela <strong>${dia}/${meses[mes-1]}/${ano}	</strong>			
+					${j}º&nbspParcela <strong>${dia}/${meses[mes-1]}/${ano}</strong>			
 				</div>					
 			`
 			}
@@ -463,7 +463,14 @@
 			<p>&nbsp</p>			
 			<p>&nbsp</p>
 			`	
-		}		
+		}	
+
+		var dia
+		var mes
+		var ano
+		var aux_dia = {{object.data_emprestimo.day}}
+		var aux_mes = {{object.data_emprestimo.month}}
+		var aux_ano = {{object.data_emprestimo.year}}
 		
 		for (var i = 0 ; i < {{object.qtd_parcelas}}; i++){
 			contador_meses++
