Representante repete ao inves do contratante

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -507,11 +507,11 @@ window.onload = function imprimir(){
         `
         <div class="quadro" > 
             <strong> III-DO GARANTIDOR - FIADOR </strong><br>
-            Nome/Razão Social: ${razao_social},
-            CNPJ: ${cnpj},
-            Endereço: ${cnpj_rua}, ${cnpj_numero_casa}, ${cnpj_bairro}, ${cnpj_cidade}-${cnpj_uf} CEP: ${cnpj_cep},
-            Telefone: ${cnpj_contato1},
-            E-mail: ${cnpj_email} 
+            Nome: ${representante},
+            CPF:  ${representante_cpf},
+            RG/órgão Emissor: ${representante_rg}, ${rep_org_emissor}, Nacionalidade: ${rep_nacionalidade}, Estado Civil: ${rep_estado_civil}
+            Endereço: ${representante_rua}, ${representante_numero_casa}, ${representante_bairro}, 
+            ${representante_cidade}-${representante_uf}, CEP: ${representante_cep}
         </div>
         `
     }
