--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -415,6 +415,9 @@ window.onload = function imprimir(){
             E assim, por estarem plenamente contratados na forma acima e em consonância com a legislação em vigor, assinam o presente contrato em duas vias de igual teor, na presença de testemunhas que a tudo assistiram e conhecimento tiveram.
         </p>
 
+        <p style="text-align:right">
+           Natal-RN${dataEmprestimo} 
+        </p>
         <p style="text-align:center">
             ____________________________________________________________<br>
             CREDOR
@@ -557,7 +560,7 @@ window.onload = function imprimir(){
             </br>
             </br>
             <p style="text-align:right" class="datacao">
-                Natal, ${dataEmprestimo}              
+                Natal-RN, ${dataEmprestimo}              
             </p>
             
         `
@@ -896,7 +899,7 @@ window.onload = function imprimir(){
         </div>
         
         <div class="paragrafo" style="text-align:center">
-            Natal-RN, 09 de Junho de 2020.
+            Natal-RN, ${dataEmprestimo} .
         </div>
 
         <div class="paragrafo" style="text-align:center">
