--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -416,7 +416,7 @@ window.onload = function imprimir(){
         </p>
 
         <p style="text-align:right">
-           Natal-RN${dataEmprestimo} 
+           Natal-RN, ${dataEmprestimo} 
         </p>
         <p style="text-align:center">
             ____________________________________________________________<br>
