--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -431,6 +431,12 @@ window.onload = function imprimir(){
 
         `
     }
+
+    {% comment %} campo 'obs' em dados do local de trabalho
+    mascara do RG
+    pergunta se cadastra cliente {% endcomment %}
+
+
     
     
     if(fiador_){    
