--- a/projeto/core/templates/fiador_decision_1.html
+++ b/projeto/core/templates/fiador_decision_1.html
@@ -9,7 +9,7 @@
             <h1>O Cliente já possui Fiador cadastrado?</h1>  
             <span class="pull-center">
                 <a href="{% url 'cliente:cliente_add' %}" type="button" class="btn btn-secondary">SIM</a>                
-                <a href="{% url 'cliente:cliente_add' %}" type="button" class="btn btn-secondary">NÃO</a>                
+                <a href="{% url 'cliente:fiador_add' %}" type="button" class="btn btn-secondary">NÃO</a>                
             </span>            
         </div>        
     </div>
